--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -21,44 +21,30 @@
 
   <section class="container-fluid my-5" id="tagline">
 
-    {% for notice in notices.static %}
-    <div class="notice alert alert-{{ notice.notice_class }} alert-dismissible fade show" role="alert">
+    {% for notice in notices %}
+
+    {% if notice.notice_class == 'none' %}
+    <div class="container my-5">
+    {% else %}
+    <div class="notice alert alert-{{ notice.notice_class }}">
+    {% endif %}
+
       {% if not notice.is_published %}
       {% include 'home/snippets/unpublished-bubble.html' %}
       {% endif %}
-
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="alert"
-        aria-label="Close"
-        onclick="requestDismissNotice('{{ notice.timestamp }}');"
-      ></button>
 
       {% if notice.material_icon %}
       <span class="material-icons">{{ notice.material_icon }}</span>
       {% endif %}
 
       {% if notice.display_title %}
-      <strong class="mx-2"> {{ notice.title }} </strong>
+      <strong> {{ notice.title }} </strong>
       <br>
       {% endif %}
 
-      <div class="body">
-        {{ notice.body|markdown|safe }}
-      </div>
-    </div>
-    {% endfor %}
-
-    {% for notice in notices.image %}
-    <div class="notice-image text-center">
-      {% if not notice.is_published %}
-      {% include 'home/snippets/unpublished-bubble.html' %}
-      {% endif %}
-
       {{ notice.body|markdown|safe }}
-
     </div>
+
     {% endfor %}
 
     <h3>
