--- a/webapp/home/static/home/css/subdomains/genome.css
+++ b/webapp/home/static/home/css/subdomains/genome.css
@@ -1,3 +1,10 @@
+code {
+  padding: .15rem .35rem;
+  margin: 0 .25rem;
+  color: var(--bs-gray-800);
+  background-color: var(--bs-gray-300);
+  border-radius: 3px;
+}
 #workflow-table {
   max-height: 400px;
   overflow-y: auto;
@@ -9,4 +16,3 @@
   height: 80px;
   width: auto;
   padding-bottom: 1rem;
-}
