--- a/webapp/home/templates/home/subdomains/genome/data-workflows.html
+++ b/webapp/home/templates/home/subdomains/genome/data-workflows.html
@@ -1,4 +1,10 @@
 <div class="container py-3 border">
+
+  <p class="my-3">
+    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis.
+    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn how to use Galaxy workflows.</a>
+  </p>
+
   <div class="accordion" id="data-workflow-accordion">
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-workflow-1-accordion">
