--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -41,7 +41,7 @@
   <section class="my-5">
     <h4 class="mb-3">Data import and preparation</h4>
 
-    <ul class="nav nav-tabs" id="dataTabs" role="tablist">
+    <ul class="nav nav-pills" id="dataTabs" role="tablist">
       <li class="nav-item" role="presentation">
         <button class="nav-link active" id="data-tools-tab" data-bs-toggle="tab" data-bs-target="#data-tools-panel" type="button" role="tab" aria-controls="home" aria-selected="true">Common tools</button>
       </li>
@@ -68,6 +68,36 @@
     </div>
   </section>
 
+  <section class="my-5">
+    <h4 class="mb-3">Genome assembly</h4>
+
+    <ul class="nav nav-pills" id="assemblyTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="assembly-tools-tab" data-bs-toggle="tab" data-bs-target="#assembly-tools-panel" type="button" role="tab" aria-controls="home" aria-selected="true">Common tools</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="assembly-workflows-tab" data-bs-toggle="tab" data-bs-target="#assembly-workflows-panel" type="button" role="tab" aria-controls="profile" aria-selected="false">Workflows</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="assembly-help-tab" data-bs-toggle="tab" data-bs-target="#assembly-help-panel" type="button" role="tab" aria-controls="contact" aria-selected="false">Help</button>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="assemblyTabContent">
+      <div class="tab-pane fade show active" id="assembly-tools-panel" role="tabpanel" aria-labelledby="assembly-tools-tab">
+        {% include 'home/subdomains/genome/assembly-tools.html' %}
+      </div>
+
+      <div class="tab-pane fade" id="assembly-workflows-panel" role="tabpanel" aria-labelledby="assembly-workflows-tab">
+        {% include 'home/subdomains/genome/assembly-workflows.html' %}
+      </div>
+
+      <div class="tab-pane fade" id="assembly-help-panel" role="tabpanel" aria-labelledby="assembly-help-tab">
+        {% include 'home/subdomains/genome/assembly-help.html' %}
+      </div>
+    </div>
+  </section>
+
 </main>
 
 {% endblock %}
@@ -84,4 +114,16 @@
       item.target = '_blank';
     }
   });
+
+  // TODO: Remove - development only (don't leave behind TBC text)
+  $('p').filter( (i, el) => el.innerText.toLowerCase().includes('tbc') ).each(
+    (i, item) => {
+      item.innerHTML = item.innerHTML
+        .replace('TBC', '<span class="text-danger fw-bold">TBC</span>')
+        .replace('tbc', '<span class="text-danger fw-bold">TBC</span>');
+      $(item).closest('.accordion-item').find('.accordion-button').addClass('bg-danger');
+      const paneId = $(item).closest('.tab-pane')[0].id;
+      $(`#${paneId.replace('-panel', '-tab')}`).addClass('bg-danger');
+    }
+  );
 {% endblock %}
