--- a/webapp/home/templates/home/subdomains/genome/data-tools.html
+++ b/webapp/home/templates/home/subdomains/genome/data-tools.html
@@ -23,7 +23,7 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-import-bpa-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-import-bpa-collapse" aria-expanded="false" aria-controls="data-import-bpa-collapse">
-          Import from BPA
+          Import data from BPA
         </button>
       </h2>
       <div id="data-import-bpa-collapse" class="accordion-collapse collapse" aria-labelledby="data-import-bpa-accordion" data-bs-parent="#data-tools-accordion">
