--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -98,6 +98,36 @@
     </div>
   </section>
 
+  <section class="my-5">
+    <h4 class="mb-3">Genome annotation</h4>
+
+    <ul class="nav nav-pills" id="annotationTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="annotation-tools-tab" data-bs-toggle="tab" data-bs-target="#annotation-tools-panel" type="button" role="tab" aria-controls="home" aria-selected="true">Common tools</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="annotation-workflows-tab" data-bs-toggle="tab" data-bs-target="#annotation-workflows-panel" type="button" role="tab" aria-controls="profile" aria-selected="false">Workflows</button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="annotation-help-tab" data-bs-toggle="tab" data-bs-target="#annotation-help-panel" type="button" role="tab" aria-controls="contact" aria-selected="false">Help</button>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="annotationTabContent">
+      <div class="tab-pane fade show active" id="annotation-tools-panel" role="tabpanel" aria-labelledby="annotation-tools-tab">
+        {% include 'home/subdomains/genome/annotation-tools.html' %}
+      </div>
+
+      <div class="tab-pane fade" id="annotation-workflows-panel" role="tabpanel" aria-labelledby="annotation-workflows-tab">
+        {% include 'home/subdomains/genome/annotation-workflows.html' %}
+      </div>
+
+      <div class="tab-pane fade" id="annotation-help-panel" role="tabpanel" aria-labelledby="annotation-help-tab">
+        {% include 'home/subdomains/genome/annotation-help.html' %}
+      </div>
+    </div>
+  </section>
+
 </main>
 
 {% endblock %}
