Complete annotations section

--- a/webapp/home/templates/home/subdomains/genome/annotation-tools.html
+++ b/webapp/home/templates/home/subdomains/genome/annotation-tools.html
@@ -39,7 +39,9 @@
           <div class="row">
             <div class="col">
               <p>
-                MAKER is designed to allow smaller eukaryotic and prokaryotic genome projects to independently annotate their genomes and to create genome databases. MAKER identifies repeats, aligns ESTs and proteins to a genome, produces ab-initio gene predictions and automatically synthesizes these data into gene annotations.
+                MAKER is able to annotate both prokaryotes and eukaryotes. It works by aligning as many evidences as possible along the genome sequence, and then reconciliating all these signals to determine probable gene structures.
+                <br><br>
+                The evidences can be transcript or protein sequences from the same (or closely related) organism. These sequences can come from public databases (like NR or GenBank) or from your own experimental data (transcriptome assembly from an RNASeq experiment for example). MAKER is also able to take into account repeated elements.
                 <br>
                 <br>
                 <em>Accepted datatypes:</em>
