--- a/webapp/home/static/home/css/subdomains/genome.css
+++ b/webapp/home/static/home/css/subdomains/genome.css
@@ -1,3 +1,25 @@
+.header-genome {
+  font-size: 5rem;
+  font-family: 'Exo 2', sans-serif;
+  margin: 1.25rem 0;
+}
+#floating-info-button {
+  position: fixed;
+  top: 8rem;
+  right: 2rem;
+  cursor: pointer;
+}
+#floating-info-button button {
+  color: var(--bs-primary);
+  line-height: 0;
+}
+#floating-info-button button
+.material-icons {
+  font-size: 2.5rem;
+}
+#floating-info-button .btn:focus {
+  box-shadow: none;
+}
 code {
   padding: .15rem .35rem;
   margin: 0 .25rem;
