--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -23,12 +23,14 @@
   <section class="container-flex text-center my-3">
     <div class="row justify-content-center">
       <div class="col-auto">
-        <img id="header-logo" src="{% static 'home/img/subdomains/genome/logo.png' %}" alt="Galaxy Australia Logo">
+        <div class="d-flex align-items-center h-100">
+          <img id="header-logo" src="{% static 'home/img/subdomains/genome/logo.png' %}" alt="Galaxy Australia Logo">
+        </div>
       </div>
       <div class="col-auto">
-        <h1 class="header-genome australia">
+        <div class="header-genome australia d-flex align-items-center h-100">
           GENOMICS
-        </h1>
+        </div>
       </div>
     </div>
   </section>
