--- a/webapp/home/templates/home/subdomains/genome.html
+++ b/webapp/home/templates/home/subdomains/genome.html
@@ -39,7 +39,9 @@
     {% include 'home/snippets/static-notices.html' %}
 
     <p class="lead">
-      Welcome to the Galaxy Australia Genomics community site. This site is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the main server.
+      Welcome to the Galaxy Australia Genomics community site. Get quick access to tools, workflows and tutorials for genome assembly and annotation.
+      This site is connected to the same server as <em>usegalaxy.org.au</em>, but with an interface dedicated to helping our genomics researchers. Your history, jobs and data quota are shared with the main server.
+      <a href="#">Find out more.</a>
     </p>
   </section>
 
