--- a/webapp/home/templates/home/subdomains/genome/annotation-help.html
+++ b/webapp/home/templates/home/subdomains/genome/annotation-help.html
@@ -8,7 +8,7 @@
       </h2>
       <div id="assembly-help-1-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-help-1-accordion" data-bs-parent="#assembly-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 These
@@ -34,7 +34,7 @@
       </h2>
       <div id="assembly-help-2-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-help-2-accordion" data-bs-parent="#assembly-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Genome annotation of eukaryotes is a little more complicated than for prokaryotes: eukaryotic genomes are usually larger than prokaryotes, with more genes. The sequences determining the beginning and the end of a gene are generally less conserved than the prokaryotic ones. Many genes also contain introns, and the limits of these introns (acceptor and donor sites) are not highly conserved.
@@ -60,7 +60,7 @@
       </h2>
       <div id="assembly-help-3-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-help-3-accordion" data-bs-parent="#assembly-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC
@@ -79,7 +79,7 @@
       </h2>
       <div id="assembly-help-4-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-help-4-accordion" data-bs-parent="#assembly-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Apollo is web-browser accessible system that lets you conduct real-time collaborative curation and editing of genome annotations.
@@ -112,7 +112,7 @@
       </h2>
       <div id="assembly-help-5-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-help-5-accordion" data-bs-parent="#assembly-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 This
@@ -127,19 +127,29 @@
     </div>
 
     <div class="accordion-item">
-      <h2 class="accordion-header" id="assembly-help-6-accordion">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#assembly-help-6-collapse" aria-expanded="false" aria-controls="assembly-help-6-collapse">
-          Galaxy help (too generic?)
+      <h2 class="accordion-header" id="data-help-7-accordion">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-7-collapse" aria-expanded="false" aria-controls="data-help-7-collapse">
+          Galaxy Australia support
         </button>
       </h2>
-      <div id="assembly-help-6-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-help-6-accordion" data-bs-parent="#assembly-help-accordion">
+      <div id="data-help-7-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-7-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                TBC
+                Any user of Galaxy Australia can request support through an
+                online form.
               </p>
             </div>
+            <div class="col col-auto">
+              <a
+                href="/request/support"
+                class="btn btn-primary"
+              >
+                Request support
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
