--- a/webapp/home/templates/home/subdomains/genome/annotation-tools.html
+++ b/webapp/home/templates/home/subdomains/genome/annotation-tools.html
@@ -8,7 +8,7 @@
       </h2>
       <div id="annotation-tools-import-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-tools-import-accordion" data-bs-parent="#annotation-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC info
@@ -36,7 +36,7 @@
       </h2>
       <div id="annotation-tools-maker-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-tools-maker-accordion" data-bs-parent="#annotation-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 MAKER is able to annotate both prokaryotes and eukaryotes. It works by aligning as many evidences as possible along the genome sequence, and then reconciliating all these signals to determine probable gene structures.
@@ -70,7 +70,7 @@
       </h2>
       <div id="annotation-tools-funannotate-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-tools-funannotate-accordion" data-bs-parent="#annotation-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 <code>Funannotate predict</code> performs a comprehensive whole genome gene prediction. Uses AUGUSTUS, GeneMark, Snap, GlimmerHMM, BUSCO, EVidence Modeler, tbl2asn, tRNAScan-SE, Exonerate, minimap2. The genome should be soft-masked before ... TBC
@@ -125,7 +125,7 @@
       </h2>
       <div id="annotation-tools-repeatmasker-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-tools-repeatmasker-accordion" data-bs-parent="#annotation-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 RepeatMasker is a program that screens DNA for interspersed repeats and low complexity DNA sequences. Galaxy AU has installed the full and curated DFam screening databases, or a custom database can be provided in <code>fasta</code> format. Additional reference data can be downloaded from
@@ -161,7 +161,7 @@
       </h2>
       <div id="annotation-tools-interproscan-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-tools-interproscan-accordion" data-bs-parent="#annotation-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Interproscan is a batch tool to query the InterPro database. It provides annotations based on multiple searches of profile and other functional databases.
@@ -183,6 +183,14 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed static">
+          <span style="font-size: 2rem; margin: -1rem 1rem 0 0;">&larr;</span> Find more tools in the tool panel
+        </button>
+      </h2>
     </div>
   </div>
 </div>
