--- a/webapp/home/templates/home/subdomains/genome/annotation-workflows.html
+++ b/webapp/home/templates/home/subdomains/genome/annotation-workflows.html
@@ -1,8 +1,7 @@
 <div class="container py-3 border">
-
   <p class="my-3">
-    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis.
-    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn how to use Galaxy workflows.</a>
+    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis. You can use and customize the example workflows below.
+    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn more.</a>
   </p>
 
   <div class="accordion" id="annotation-workflow-accordion">
@@ -14,7 +13,7 @@
       </h2>
       <div id="annotation-workflow-1-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-workflow-1-accordion" data-bs-parent="#annotation-workflow-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC
@@ -33,7 +32,7 @@
       </h2>
       <div id="annotation-workflow-2-collapse" class="accordion-collapse collapse" aria-labelledby="annotation-workflow-2-accordion" data-bs-parent="#annotation-workflow-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC
