--- a/webapp/home/templates/home/subdomains/genome/assembly-tools.html
+++ b/webapp/home/templates/home/subdomains/genome/assembly-tools.html
@@ -8,7 +8,7 @@
       </h2>
       <div id="assembly-tools-hifiasm-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-tools-hifiasm-accordion" data-bs-parent="#assembly-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 A haplotype-resolved assembler for PacBio HiFi reads.
@@ -40,7 +40,7 @@
       </h2>
       <div id="assembly-tools-flye-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-tools-flye-accordion" data-bs-parent="#assembly-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 <em>de novo</em> assembly of single-molecule sequencing reads,
@@ -70,12 +70,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="assembly-tools-salsa-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#assembly-tools-salsa-collapse" aria-expanded="false" aria-controls="assembly-tools-salsa-collapse">
-        <code>Salsa</code> - scaffold long-read assemblies with HiC data
+        <code>Salsa</code> - scaffold assembly with HiC data
         </button>
       </h2>
       <div id="assembly-tools-salsa-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-tools-salsa-accordion" data-bs-parent="#assembly-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Salsa is a scaffolding tool based on a computational method that
@@ -104,12 +104,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="assembly-tools-quast-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#assembly-tools-quast-collapse" aria-expanded="false" aria-controls="assembly-tools-quast-collapse">
-        <code>Quast</code> - genome assembly quality assessment
+        <code>Quast</code> - assess genome assembly quality
         </button>
       </h2>
       <div id="assembly-tools-quast-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-tools-quast-accordion" data-bs-parent="#assembly-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 QUAST = QUality ASsessment Tool. The tool evaluates genome assemblies by computing various metrics. If you have one or multiple genome assemblies, you can assess their quality with Quast. It works with or without reference genome.
@@ -136,12 +136,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="assembly-tools-busco-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#assembly-tools-busco-collapse" aria-expanded="false" aria-controls="assembly-tools-busco-collapse">
-        <code>Busco</code> - assess genome assembly completeness
+        <code>Busco</code> - assess genome assembly quality
         </button>
       </h2>
       <div id="assembly-tools-busco-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-tools-busco-accordion" data-bs-parent="#assembly-tools-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 BUSCO: assessing genome assembly and annotation completeness with Benchmarking Universal Single-Copy Orthologs. The tool attempts to provide a quantitative assessment of the completeness in terms of the expected gene content of a genome assembly, transcriptome, or annotated gene set.
@@ -163,6 +163,14 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button collapsed static">
+          <span style="font-size: 2rem; margin: -1rem 1rem 0 0;">&larr;</span> Find more tools in the tool panel
+        </button>
+      </h2>
     </div>
   </div>
 </div>
