--- a/webapp/home/templates/home/subdomains/genome/assembly-workflows.html
+++ b/webapp/home/templates/home/subdomains/genome/assembly-workflows.html
@@ -1,13 +1,12 @@
 <div class="container py-3 border">
-
   <p class="my-3">
-    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis.
-    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn how to use Galaxy workflows.</a>
+    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis. You can use and customize the example workflows below.
+    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn more.</a>
   </p>
 
   <div class="accordion" id="assembly-workflow-pacbio-accordion">
 
-    <p class="lead">Assembly with PacBio HiFi data</p>
+    <p class="fw-bold">Assembly with PacBio HiFi data</p>
 
     <div class="accordion-item">
       <h2 class="accordion-header" id="assembly-workflow-1-accordion">
@@ -17,7 +16,7 @@
       </h2>
       <div id="assembly-workflow-1-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-1-accordion" data-bs-parent="#assembly-workflow-pacbio-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 This
@@ -43,7 +42,7 @@
       </h2>
       <div id="assembly-workflow-2-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-2-accordion" data-bs-parent="#assembly-workflow-pacbio-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Convert a BAM file to FASTQ format to perform QC analysis
@@ -91,7 +90,7 @@
       </h2>
       <div id="assembly-workflow-3-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-3-accordion" data-bs-parent="#assembly-workflow-pacbio-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Assemble a genome using PacBio HiFi reads.
@@ -138,7 +137,7 @@
       </h2>
       <div id="assembly-workflow-4-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-4-accordion" data-bs-parent="#assembly-workflow-pacbio-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Optional workflow to purge duplicates from the contig assembly.
@@ -186,7 +185,7 @@
       </h2>
       <div id="assembly-workflow-5-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-5-accordion" data-bs-parent="#assembly-workflow-pacbio-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Evaluate the quality of your genome assembly with a comprehensive report including FASTA stats, BUSCO, QUAST, Meryl and Merqury.
@@ -228,7 +227,7 @@
 
   <div class="accordion pt-5" id="assembly-workflow-nanopore-accordion">
 
-    <p class="lead">Assembly with Nanopore data and polishing with Illumina data</p>
+    <p class="fw-bold">Assembly with Nanopore data and polishing with Illumina data</p>
 
     <div class="accordion-item">
       <h2 class="accordion-header" id="assembly-workflow-6-accordion">
@@ -238,7 +237,7 @@
       </h2>
       <div id="assembly-workflow-6-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-6-accordion" data-bs-parent="#assembly-workflow-nanopore-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 This
@@ -264,7 +263,7 @@
       </h2>
       <div id="assembly-workflow-7-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-7-accordion" data-bs-parent="#assembly-workflow-nanopore-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Assemble Nanopore long reads. This workflow can be run alone or as part of a combined workflow for large genome assembly.
@@ -311,7 +310,7 @@
       </h2>
       <div id="assembly-workflow-8-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-8-accordion" data-bs-parent="#assembly-workflow-nanopore-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Polishes (corrects) an assembly, using long reads (with the tools Racon and Medaka) and short reads (with the tool Racon).
@@ -360,7 +359,7 @@
       </h2>
       <div id="assembly-workflow-9-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-9-accordion" data-bs-parent="#assembly-workflow-nanopore-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Assesses the quality of the genome assembly. Generates statistics, determines if expected genes are present and align contigs to a reference genome.
@@ -403,7 +402,7 @@
 
   <div class="accordion pt-5" id="assembly-workflow-hic-accordion">
 
-    <p class="lead">Assembly with PacBio HiFi and HiC data</p>
+    <p class="fw-bold">Assembly with PacBio HiFi and HiC data</p>
 
     <div class="accordion-item">
       <h2 class="accordion-header" id="assembly-workflow-10-accordion">
@@ -413,7 +412,7 @@
       </h2>
       <div id="assembly-workflow-10-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-10-accordion" data-bs-parent="#assembly-workflow-hic-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 These workflows have been developed as part of the global Vertebrate Genome Project (VGP). A complete guide can be found
@@ -440,7 +439,7 @@
       </h2>
       <div id="assembly-workflow-11-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-11-accordion" data-bs-parent="#assembly-workflow-hic-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 This workflow produces a Meryl database and Genomescope outputs that will be used to determine parameters for following workflows, and assess the quality of genome assemblies. Specifically, it provides information about the genomic complexity, such as the genome size and levels of heterozygosity and repeat content, as well about the data quality.
@@ -487,7 +486,7 @@
       </h2>
       <div id="assembly-workflow-12-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-12-accordion" data-bs-parent="#assembly-workflow-hic-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC: Assemble HiFi reads and phase with your HiC data.
@@ -534,7 +533,7 @@
       </h2>
       <div id="assembly-workflow-13-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-13-accordion" data-bs-parent="#assembly-workflow-hic-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC remove duplicates from your HiFi assembly.
@@ -581,7 +580,7 @@
       </h2>
       <div id="assembly-workflow-14-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-14-accordion" data-bs-parent="#assembly-workflow-hic-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC description
@@ -628,7 +627,7 @@
       </h2>
       <div id="assembly-workflow-15-collapse" class="accordion-collapse collapse" aria-labelledby="assembly-workflow-15-accordion" data-bs-parent="#assembly-workflow-hic-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 TBC description
