--- a/webapp/home/templates/home/subdomains/genome/data-help.html
+++ b/webapp/home/templates/home/subdomains/genome/data-help.html
@@ -8,19 +8,47 @@
       </h2>
       <div id="data-help-1-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-1-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                You can upload your data to Galaxy using the <a href="https://training.galaxyproject.org/training-material/topics/introduction/tutorials/galaxy-intro-short/tutorial.html#upload-a-file" target="_blank">Upload tool</a> from anywhere in Galaxy. Just look for the "Upload data" button at the top of the tool panel.
+                You can upload your data to Galaxy using the Upload tool from anywhere in Galaxy. Just look for the "Upload data" button at the top of the tool panel.
               </p>
             </div>
             <div class="col col-auto">
               <a
-                href=""
+                href="https://training.galaxyproject.org/training-material/topics/galaxy-interface/"
                 class="btn btn-primary"
                 target="_blank"
               >
-                More info (tbc)
+                More info
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="data-help-10-accordion">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-10-collapse" aria-expanded="false" aria-controls="data-help-10-collapse">
+          How can I import data from the BPA portal?
+        </button>
+      </h2>
+      <div id="data-help-10-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-10-accordion" data-bs-parent="#data-help-accordion">
+        <div class="accordion-body">
+          <div class="row align-items-center">
+            <div class="col">
+              <p>
+                BioPlatforms Australia allows data downloads via URL. Once you have generated one of these URLs in the BPA portal, you can import it into Galaxy using the "Fetch data" feature of the Upload tool.
+              </p>
+            </div>
+            <div class="col col-auto">
+              <a
+                href="https://australianbiocommons.github.io/how-to-guides/genome_assembly/hifi_assembly#in-depth-workflow-guide"
+                class="btn btn-primary"
+                target="_blank"
+              >
+                More info
               </a>
             </div>
           </div>
@@ -36,20 +64,20 @@
       </h2>
       <div id="data-help-2-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-2-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                TBC: While your data is private and secure on Galaxy, we do not recommend uploading sensitive data to Galaxy AU as the service is not accredited with ISO 27001 or ISO 27018.
+                No, do not upload personal or sensitive, such as human health or clinical data.
+                Please see our
+                <a href="/about#data-privacy">Data Privacy</a>
+                page for definitions of sensitive and health-related information.
               </p>
-            </div>
-            <div class="col col-auto">
-              <a
-                href=""
-                class="btn btn-primary"
-                target="_blank"
-              >
-                More info (tbc)
-              </a>
+
+              <p>
+                Please also make sure you have read our
+                <a href="/about#terms-of-service">Terms of Service</a>,
+                which covers hosting and analysis of research data.
+              </p>
             </div>
           </div>
         </div>
@@ -59,25 +87,18 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-help-3-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-3-collapse" aria-expanded="false" aria-controls="data-help-3-collapse">
-          How can I obtain some sample/public data?
+          Is my data private?
         </button>
       </h2>
       <div id="data-help-3-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-3-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                TBC
+                Please read our
+                <a href="/about#data-privacy">Privacy Policy</a>
+                for information on your personal data and any data that you upload.
               </p>
-            </div>
-            <div class="col col-auto">
-              <a
-                href=""
-                class="btn btn-primary"
-                target="_blank"
-              >
-                More info (TBC)
-              </a>
             </div>
           </div>
         </div>
@@ -92,10 +113,10 @@
       </h2>
       <div id="data-help-4-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-4-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                TBC
+                Please submit a quota request if your Galaxy Australia account reaches its data storage limit. Requests are usually provisioned quickly if you provide a reasonable use case for your request.
               </p>
             </div>
             <div class="col col-auto">
@@ -114,23 +135,24 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-help-5-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-5-collapse" aria-expanded="false" aria-controls="data-help-5-collapse">
-          Can I share my Galaxy datasets?
+          Tutorial: Quality Control
         </button>
       </h2>
       <div id="data-help-5-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-5-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                TBC
+                Quality control and data cleaning is an essential first step in any NGS analysis. This tutorial will show you how to use and interpret results from <code>FastQC</code>, <code>NanoPlot</code> and <code>PycoQC</code>.
               </p>
             </div>
             <div class="col col-auto">
               <a
-                href=""
+                href="https://training.galaxyproject.org/training-material/topics/sequence-analysis/tutorials/quality-control/tutorial.html"
                 class="btn btn-primary"
+                target="_blank"
               >
-                TBC
+                Tutorial
               </a>
             </div>
           </div>
@@ -141,23 +163,24 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-help-6-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-6-collapse" aria-expanded="false" aria-controls="data-help-6-collapse">
-          What can I learn about my raw data?
+          Tutorial: introduction to Genomics and Galaxy
         </button>
       </h2>
       <div id="data-help-6-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-6-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
-                TBC
+                This practical aims to familiarize you with the Galaxy user interface. It will teach you how to perform basic tasks such as importing data, running tools, working with histories, creating workflows, and sharing your work.
               </p>
             </div>
             <div class="col col-auto">
               <a
-                href=""
+                href="https://training.galaxyproject.org/training-material/topics/introduction/tutorials/galaxy-intro-strands/tutorial.html"
                 class="btn btn-primary"
+                target="_blank"
               >
-                TBC
+                Tutorial
               </a>
             </div>
           </div>
@@ -168,66 +191,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-help-7-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-7-collapse" aria-expanded="false" aria-controls="data-help-7-collapse">
-          Tutorial: Data QC
+          Galaxy Australia support
         </button>
       </h2>
       <div id="data-help-7-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-7-accordion" data-bs-parent="#data-help-accordion">
         <div class="accordion-body">
-          <div class="row">
-            <div class="col">
-              <p>
-                TBC
-              </p>
-            </div>
-            <div class="col col-auto">
-              <a
-                href=""
-                class="btn btn-primary"
-              >
-                TBC
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="data-help-8-accordion">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-8-collapse" aria-expanded="false" aria-controls="data-help-8-collapse">
-          Tutorial: Data in Galaxy
-        </button>
-      </h2>
-      <div id="data-help-8-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-8-accordion" data-bs-parent="#data-help-accordion">
-        <div class="accordion-body">
-          <div class="row">
-            <div class="col">
-              <p>
-                TBC
-              </p>
-            </div>
-            <div class="col col-auto">
-              <a
-                href=""
-                class="btn btn-primary"
-              >
-                TBC
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="data-help-9-accordion">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-help-9-collapse" aria-expanded="false" aria-controls="data-help-9-collapse">
-          Galaxy Australia support
-        </button>
-      </h2>
-      <div id="data-help-9-collapse" class="accordion-collapse collapse" aria-labelledby="data-help-9-accordion" data-bs-parent="#data-help-accordion">
-        <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Any user of Galaxy Australia can request support through an
