--- a/webapp/home/templates/home/subdomains/genome/data-workflows.html
+++ b/webapp/home/templates/home/subdomains/genome/data-workflows.html
@@ -1,20 +1,19 @@
 <div class="container py-3 border">
-
   <p class="my-3">
-    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis.
-    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn how to use Galaxy workflows.</a>
+    A workflow is a series of Galaxy tools that have been linked together to perform a specific analysis. You can use and customize the example workflows below.
+    <a href="https://galaxyproject.org/learn/advanced-workflow/" target="_blank">Learn more.</a>
   </p>
 
   <div class="accordion" id="data-workflow-accordion">
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-workflow-1-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-workflow-1-collapse" aria-expanded="false" aria-controls="data-workflow-1-collapse">
-        Workflow: Data QC
+          Data QC
         </button>
       </h2>
       <div id="data-workflow-1-collapse" class="accordion-collapse collapse" aria-labelledby="data-workflow-1-accordion" data-bs-parent="#data-workflow-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Report statistics from sequencing reads.
@@ -58,12 +57,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-workflow-2-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-workflow-2-collapse" aria-expanded="false" aria-controls="data-workflow-2-collapse">
-        Workflow: Kmer counting to estimate genome size
+          Kmer counting to estimate genome size
         </button>
       </h2>
       <div id="data-workflow-2-collapse" class="accordion-collapse collapse" aria-labelledby="data-workflow-2-accordion" data-bs-parent="#data-workflow-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Estimates genome size and heterozygosity based on counts of kmers.
@@ -106,12 +105,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-workflow-3-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-workflow-3-collapse" aria-expanded="false" aria-controls="data-workflow-3-collapse">
-        Workflow: Trim and filter reads
+          Trim and filter reads
         </button>
       </h2>
       <div id="data-workflow-3-collapse" class="accordion-collapse collapse" aria-labelledby="data-workflow-3-accordion" data-bs-parent="#data-workflow-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Trims and filters raw sequence reads according to specified settings.
@@ -153,12 +152,12 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="data-workflow-4-accordion">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#data-workflow-4-collapse" aria-expanded="false" aria-controls="data-workflow-4-collapse">
-        Workflow: Subsample data for testing
+          Subsample data for testing
         </button>
       </h2>
       <div id="data-workflow-4-collapse" class="accordion-collapse collapse" aria-labelledby="data-workflow-4-accordion" data-bs-parent="#data-workflow-accordion">
         <div class="accordion-body">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col">
               <p>
                 Take a sample of your data for building and testing workflows (in development, not yet available).
