--- a/webapp/home/templates/home/subdomains/genome/floating-info-button.html
+++ b/webapp/home/templates/home/subdomains/genome/floating-info-button.html
@@ -18,8 +18,8 @@
       <div class="modal-body">
         <p>
           <em>genome.usegalaxy.org.au</em>
-          is a community site for genome assembly and annotation. All the tools and functionality of Galaxy Australia are still available in this site, but the homepage content is directed towards helping genomics researchers.
-          <p><a href="https://usegalaxy.org.au" target="_blank">Take me back to normal Galaxy!</a></p>
+          is a community site for genome assembly and annotation. All the tools and functionality of Galaxy Australia are still available in this site, but the homepage content is dedicated to helping genomics researchers.
+          <p><a href="https://usegalaxy.org.au" target="_blank">Take me back to normal Galaxy Australia!</a></p>
           <p><a href="#">What is a community site and how can I use it?</a></p>
           <p><a href="#">What is Galaxy Australia?</a></p>
           <p><a href="/request/support">Galaxy Australia support</a></p>
